files index and js and css

--- a/index_jqueryDay2.html
+++ b/index_jqueryDay2.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8" >
 	<title>JQuery Day 2</title>
+	<link rel="stylesheet" href="styles_jqueryDay2.css" />
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </head>
 <body>
 
+
+		<script src="script_jqueryDay2.js"></script>
 </body>
 </html>
