--- a/Basic_exercises/index_jqueryDay2.html
+++ b/Basic_exercises/index_jqueryDay2.html
@@ -7,7 +7,11 @@
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </head>
 <body>
-
+<div>
+	<img id="Santa_Clause" src="img/santa_clause.png" alt="Santa Clause" width="264" height="264">
+</div>
+<div id="Santa_text">
+</div>
 
 		<script src="script_jqueryDay2.js"></script>
 </body>
